RFA_MilestoneRM01/src/objects/BOD_Members__c.object
<CustomObject>
    <fields>
        <fullName>Acronym__c</fullName>
        <formula>Username__r.COA_Acronym__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acronym</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOD_Meeting__c</fullName>
        <label>BOD Meeting</label>
        <referenceTo>BOD_Meeting__c</referenceTo>
        <relationshipLabel>BOD Members</relationshipLabel>
        <relationshipName>BOD_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BOD_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>duplicate_check__c</fullName>
        <label>Duplicate Check for BOD Members</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>取締役会メンバー</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BODMember-{00000000}</displayFormat>
        <label>BOD Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>Admin_of_BOD</fullName>
        <active>true</active>
        <label>BOD Admin</label>
    </recordTypes>
    <recordTypes>
        <fullName>BOD_Advisor</fullName>
        <active>true</active>
        <label>BOD Advisor</label>
    </recordTypes>
    <recordTypes>
        <fullName>BOD_Guest</fullName>
        <active>true</active>
        <label>BOD Guest</label>
    </recordTypes>
    <recordTypes>
        <fullName>BOD_Member</fullName>
        <active>true</active>
        <label>BOD Member</label>
    </recordTypes>
    <recordTypes>
        <fullName>Secretary_of_BOD</fullName>
        <active>true</active>
        <label>BOD Secretary</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>